--- a/react-fe/src/pages/HostGame.module.css
+++ b/react-fe/src/pages/HostGame.module.css
@@ -18,7 +18,7 @@
     border-radius: 16px;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
-    margin: 32px 16px 0 16px; /* 32px space from the header */
+    margin: 32px 16px 0 16px;
 }
 
 .title {
